k8s/gateway-api/backendtrafficpolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: hello-world
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hello-world
  timeout:
    tcp:
      connectTimeout: 5s
    http:
      requestTimeout: 10s
      connectionIdleTimeout: 60s
  rateLimit:
    global:
      rules:
        - clientSelectors:
            - sourceCIDR:
                type: Distinct
                value: 0.0.0.0/0
          limit:
            requests: 10
            unit: Minute
