k8s/gateway-api/httproute-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-world-redirect
spec:
  parentRefs:
    - kind: ListenerSet
      name: hello-world
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /secure
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
